tests/spec/format/snapshots/assert_statement.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { assert 2 + 2 == 5 }"
---
fn test() {
  assert 2 + 2 == 5
}
