tests/spec/format/snapshots/assignment_simple.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { x = 42 }"
---
fn test() {
  x = 42
}
