tests/spec/format/snapshots/attribute_multiple_on_struct.snap
---
source: tests/spec/format/mod.rs
description: |-
  #[json]
  #[xml]
  struct Config { value: int }
---
#[json]
#[xml]
struct Config { value: int }
