tests/spec/format/snapshots/attribute_on_enum.snap
---
source: tests/spec/format/mod.rs
description: |-
  #[json]
  enum Shape { Circle, Square }
---
#[json]
enum Shape {
  Circle,
  Square,
}
