tests/spec/format/snapshots/attribute_on_field.snap
---
source: tests/spec/format/mod.rs
description: |-
  struct Person {
    #[json("firstName")]
    first_name: string,
  }
---
struct Person {
  #[json("firstName")]
  first_name: string,
}
