tests/spec/format/snapshots/attribute_on_struct.snap
---
source: tests/spec/format/mod.rs
description: |-
  #[json]
  struct Person { name: string }
---
#[json]
struct Person { name: string }
