tests/spec/format/snapshots/attribute_struct_and_fields.snap
---
source: tests/spec/format/mod.rs
description: |-
  #[json]
  struct Person {
    #[json("firstName")]
    first_name: string,
    #[json(omitempty)]
    age: int,
  }
---
#[json]
struct Person {
  #[json("firstName")]
  first_name: string,
  #[json(omitempty)]
  age: int,
}
