tests/spec/format/snapshots/attribute_with_multiple_args.snap
---
source: tests/spec/format/mod.rs
description: |-
  struct Item {
    #[json(snake_case, omitempty)]
    value: int,
  }
---
struct Item {
  #[json(snake_case, omitempty)]
  value: int,
}
