tests/spec/format/snapshots/attribute_with_negated_flag.snap
---
source: tests/spec/format/mod.rs
description: |-
  struct Item {
    #[json(!omitempty)]
    value: int,
  }
---
struct Item {
  #[json(!omitempty)]
  value: int,
}
