tests/spec/format/snapshots/attribute_with_raw_string.snap
---
source: tests/spec/format/mod.rs
description: |-
  struct User {
    #[tag(`validate:"required,email"`)]
    email: string,
  }
---
struct User {
  #[tag(`validate:"required,email"`)]
  email: string,
}
