tests/spec/format/snapshots/binary_addition.snap
---
source: tests/spec/format/mod.rs
description: "input: fn test() { 1 + 2 }"
---
fn test() {
  1 + 2
}
